# DormVibe

./: DEPLOY.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
api/: app.ts
apps/api/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/ai/: base.py  router.py
apps/api/app/ai/providers/: fake.py  minimax.py
apps/api/app/contexts/catalog/domain/: product.py
apps/api/app/contexts/catalog/infrastructure/: embeddings.py  models.py  repository.py  seed.py
apps/api/app/contexts/catalog/interfaces/: router.py
apps/api/app/contexts/identity/application/: password.py  service.py  tokens.py
apps/api/app/contexts/identity/domain/: refresh_token.py  user.py
apps/api/app/contexts/identity/infrastructure/: models.py  refresh_token_repository.py  repository.py
apps/api/app/contexts/identity/interfaces/: dto.py  router.py
apps/api/app/contexts/projects/domain/: project.py
apps/api/app/contexts/projects/infrastructure/: models.py  repository.py
apps/api/app/contexts/projects/interfaces/: dto.py  router.py
apps/api/app/contexts/upload/: router.py
apps/api/app/core/: config.py  deps.py  logging.py
apps/api/app/db/: base.py  session.py
apps/api/scripts/: dev.mjs
apps/api/tests/: conftest.py  test_auth_refresh.py  test_corpus.py  test_demo_flow.py  test_edit_reducer.py  test_embeddings.py  test_layout_solver.py  test_recompose_endpoint.py  test_scene_properties.py  test_style_profile_endpoint.py
apps/api/tests/fixtures/scene_ops/: corpus.json
src/: App.tsx  (+2 more)
(+102 files in other folders)
